# torcheck

./: .flake8  .travis.yml  LICENSE.md  Makefile  README.md  pyproject.toml  use_case.py
pytorchtest/: registry.py  test_item.py
tests/: conftest.py  test_disable_enable.py  test_end_to_end.py  test_output_check.py  test_param_and_output_check.py  test_param_check.py  test_verbose.py
torcheck/: __init__.py  output_spec.py  param_spec.py  registry.py
torcheck/utils/: __init__.py  message_utils.py
torchtest/: __init__.py  message_utils.py  output_spec.py  param_spec.py  registry.py  spec.py
